--- a/src/pages/post/[...slug].astro
+++ b/src/pages/post/[...slug].astro
@@ -11,8 +11,8 @@ import { siteConfig } from '@constants/site-config';
 import Layout from '@layouts/Layout.astro';
 import TwoColumnLayout from '@layouts/TwoColumnLayout.astro';
 import { buildCategoryPath, getCategoryArr, getPostDescription, getPostSummary, getSortedPosts } from '@lib/content';
-import { parseDate } from '@lib/datetime';
 import { Icon } from 'astro-icon/components';
+import { formatInTimeZone } from 'date-fns-tz';
 
 export async function getStaticPaths() {
   const postCollections = await getSortedPosts();
@@ -43,7 +43,7 @@ const jsonLd = {
     name: siteConfig.author ?? siteConfig.name,
     url: Astro.site,
   },
-  datePublished: parseDate(date, 'YYYY-MM-DD'),
+  datePublished: formatInTimeZone(date, 'UTC', 'yyyy-MM-dd'),
 };
 
 const categoryArr = getCategoryArr(categories?.[0]);
