--- a/src/components/ui/cover/Cover.astro
+++ b/src/components/ui/cover/Cover.astro
@@ -1,13 +1,12 @@
 ---
+import { MAX_WIDTH } from '@/constants/layout';
 import { siteConfig } from '@constants/site-config';
-import { parseDate } from '@lib/datetime';
 import { getLqipStyle } from '@lib/lqip';
 import { Icon } from 'astro-icon/components';
+import { formatInTimeZone } from 'date-fns-tz';
 import readingTime from 'reading-time';
 import type { BlogPost } from 'types/blog';
 import WaveSvg from './wave';
-import { MAX_WIDTH } from '@/constants/layout';
-import { Image } from 'astro:assets';
 
 export interface CoverProps {
   data?: BlogPost;
@@ -58,12 +57,12 @@ const bannerLqipStyle = getLqipStyle('/img/site_header_1920.webp');
             <p class="mt-3 flex flex-wrap items-center justify-center gap-4 md:text-xs">
               <span class="flex items-center gap-1">
                 <Icon name="fa6-solid:calendar-days" />
-                发表于 {parseDate(date ?? '', 'YYYY-MM-DD hh:mm')}
+                发表于 {date && formatInTimeZone(date, 'UTC', 'yyyy-MM-dd HH:mm')}
               </span>
               {updated && (
                 <span class="flex items-center gap-1">
                   <Icon name="fa6-solid:calendar-days" />
-                  更新于 {parseDate(updated, 'YYYY-MM-DD hh:mm')}
+                  更新于 {formatInTimeZone(updated, 'UTC', 'yyyy-MM-dd HH:mm')}
                 </span>
               )}
               <span class="flex items-center gap-1">
