--- a/src/components/post/PostItemCard.astro
+++ b/src/components/post/PostItemCard.astro
@@ -156,7 +156,7 @@ const lqipProps = getLqipProps(finalCover);
         >
           {data?.data.tags?.length
             ? data?.data.tags.map((tag: string, index: number) => (
-                <a href={`/tags/${tag.replace(/\//g, '-')}`}>
+                <a href={`/tags/${tag.toLowerCase().replace(/\//g, '-')}`}>
                   <Badge
                     className={cn(
                       'hover:text-badge-primary/80 hidden cursor-pointer gap-0.5 border-none px-1 text-xs font-bold whitespace-nowrap transition-colors duration-300 @md:flex',
