--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -5,7 +5,7 @@ import { CONTENT_PADDING } from '@constants/layout';
 import { siteConfig } from '@constants/site-config';
 import Layout from '@layouts/Layout.astro';
 import TwoColumnLayout from '@layouts/TwoColumnLayout.astro';
-import { getPostLastCategory, getSortedPosts } from '@lib/content';
+import { getPostLastCategory, getSortedPosts, normalizeTag } from '@lib/content';
 import { formatInTimeZone } from 'date-fns-tz';
 
 export async function getStaticPaths() {
@@ -14,13 +14,13 @@ export async function getStaticPaths() {
 
   posts.forEach((post) => {
     const postTags = post.data.tags || [];
-    postTags.forEach((tag) => tags.add(tag));
+    postTags.forEach((tag) => tags.add(normalizeTag(tag)));
   });
 
   return Array.from(tags).map((tag) => ({
     params: { tag: tag.replace(/\//g, '-') },
     props: {
-      posts: posts.filter((post) => post.data.tags?.includes(tag)),
+      posts: posts.filter((post) => post.data.tags?.some((t) => normalizeTag(t) === tag)),
       tag,
     },
   }));
