--- a/src/styles/global/tailwind.css
+++ b/src/styles/global/tailwind.css
@@ -108,6 +108,10 @@
     text-align: center;
     font-family: "Bear Days", sans-serif;
     font-weight: 700;
-    color: #f49ab8;
+    color: #e9546b;
   }
+}
+
+.dark .logo-text {
+  color: #ed788c;
 }
