--- a/src/pages/friends.astro
+++ b/src/pages/friends.astro
@@ -4,12 +4,13 @@ import FriendsGrid from '@components/friends/FriendsGrid';
 import HomeSider from '@components/layout/HomeSider.astro';
 import Cover from '@components/ui/cover/Cover.astro';
 import { CONTENT_PADDING } from '@constants/layout';
+import { siteConfig } from '@constants/site-config';
 import Layout from '@layouts/Layout.astro';
 import TwoColumnLayout from '@layouts/TwoColumnLayout.astro';
 import Remark from '@/components/common/Remark.astro';
 
-const title = '友情链接 | cosの博客';
-const description = '我的小伙伴们,欢迎加友链~';
+const title = `友情链接 | ${siteConfig.title}`;
+const description = '我的小伙伴们，欢迎加友链～';
 ---
 
 <Layout title={title} description={description}>
