--- a/src/components/ui/cover/Cover.astro
+++ b/src/components/ui/cover/Cover.astro
@@ -24,7 +24,7 @@ const isDraft = import.meta.env.DEV && draft === true;
 const bannerLqipStyle = getLqipStyle('/img/site_header_1920.webp');
 ---
 
-<div class="relative flex h-[60dvh] max-h-200 overflow-hidden">
+<div class="relative flex h-[60dvh] z-0 max-h-200 overflow-hidden">
   <div class="absolute inset-0 h-full bg-black/40"></div>
   <div class="absolute inset-0 bottom-[8dvh] flex flex-col items-center justify-center px-5 text-white">
     {
