--- a/src/components/ui/cover/WeeklyCover.astro
+++ b/src/components/ui/cover/WeeklyCover.astro
@@ -12,7 +12,7 @@ const weeklyConfig = siteConfig.featuredSeries;
 const descriptionHtml = weeklyConfig?.description ? marked.parse(weeklyConfig.description) : '';
 ---
 
-<div class="relative flex max-h-[50rem] min-h-[70dvh] items-center justify-center overflow-hidden pb-6">
+<div class="relative flex z-0 max-h-200 min-h-[70dvh] items-center justify-center overflow-hidden pb-6">
   <div class="absolute inset-0 h-full bg-black/40"></div>
   <!-- 周刊封面图 -->
   {
