--- a/src/styles/global/tailwind.css
+++ b/src/styles/global/tailwind.css
@@ -48,6 +48,7 @@
 
   html {
     scrollbar-gutter: stable;
+    background: linear-gradient(to top, var(--gradient-bg-end) 0, var(--gradient-bg-start) 30%) no-repeat bottom;
   }
 
   .vertical-scrollbar::-webkit-scrollbar {
